chore: update docstrings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,6 +109,7 @@ ignore-words-list = ["CheckIn", "dependant"]
 
 
 [tool.mypy]
+python_version = "3.11"
 files = [
   "diracx-api/src/**/*.py",
   "diracx-cli/src/**/*.py",
