--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -56,6 +56,7 @@ repos:
     hooks:
     - id: mdformat
       args: ["--number"]
+      exclude: ^CHANGELOG\.md$
       additional_dependencies:
       - mdformat-mkdocs
       - mdformat-gfm
