fix: require fastapi>=0.121.0 for Depends scope parameter
The scope parameter for Depends() was introduced in FastAPI 0.121.0.
Without this minimum version, tests fail with:
TypeError: Depends() got an unexpected keyword argument 'scope'

--- a/diracx-routers/pyproject.toml
+++ b/diracx-routers/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
     "diracx-db",
     "python-dotenv",    # TODO: We might not need this
     "python-multipart",
-    "fastapi",
+    "fastapi>=0.121.0",
     "httpx",
     "joserfc",
     "pydantic >=2.10",
