docs: add explanation of documentation system architecture
Add a new page explaining how the DiracX documentation system works,
including:
- Overview of MkDocs with Material theme
- The Divio documentation system (tutorials, how-to, reference, explanation)
- Multi-repository architecture with mkdocs-diracx-plugin
- Three audiences (users, administrators, developers)
- Navigation structure and edit URLs

Part of addressing issue #614.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -157,6 +157,7 @@ nav:
       - Manage extensions: developer/manage_extension.md
     - Explanations:
       - dev/explanations/index.md
+      - Documentation system: dev/explanations/documentation-system.md
       - Components:
         - dev/explanations/components/index.md
         - API: dev/explanations/components/api.md
