test: unfreeze pytest-asyncio by using pytest-lazy-fixtures
Replace the resolve_fixtures_hack workaround with pytest-lazy-fixtures
to properly handle parametrized async fixtures. This allows upgrading
pytest-asyncio from the pinned 1.0.0 to >=1.1.0.

- Add pytest-lazy-fixtures dependency
- Create prefilled_dummy_opensearch_db and prefilled_sql_opensearch_db
  fixtures in diracx-testing
- Refactor test_search.py to use lazy fixture references
- Remove the resolve_fixtures_hack function

--- a/diracx-testing/pyproject.toml
+++ b/diracx-testing/pyproject.toml
@@ -14,8 +14,9 @@ classifiers = [
 ]
 dependencies = [
     "pytest",
-    "pytest-asyncio==1.0.0",
+    "pytest-asyncio>=1.1.0",
     "pytest-cov",
+    "pytest-lazy-fixtures",
     "pytest-xdist",
     "httpx",
     "joserfc",
