fix: Fix hook, it always failed and executed multiple times
fix: Exclude automatically generated __init__ files

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -91,3 +91,5 @@ repos:
         name: Check for __all__ presence in __init__.py files
         language: system
         entry: "sh .github/workflows/check_init_files_precommit_hook.sh"
+        files: ^diracx-.*__init__\.py$
+        exclude: _generated
