--- a/.github/workflows/draft-on-changes-requested.yml
+++ b/.github/workflows/draft-on-changes-requested.yml
@@ -5,29 +5,11 @@ on:
     workflows: ["Record Changes Requested"]
     types: [completed]
 
-permissions:
-  pull-requests: write
-  actions: read
+permissions: {}
 
 jobs:
-  get-pr:
-    if: github.event.workflow_run.conclusion == 'success'
-    runs-on: ubuntu-latest
-    outputs:
-      pr_number: ${{ steps.pr.outputs.number }}
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: pr-info
-          run-id: ${{ github.event.workflow_run.id }}
-          github-token: ${{ github.token }}
-      - id: pr
-        run: echo "number=$(cat pr_number.txt)" >> "$GITHUB_OUTPUT"
-
   draft:
-    needs: get-pr
-    permissions:
-      pull-requests: write
+    if: github.event.workflow_run.conclusion == 'success'
     uses: DIRACGrid/management/.github/workflows/draft-on-changes-requested.yml@master
-    with:
-      pr_number: ${{ fromJSON(needs.get-pr.outputs.pr_number) }}
+    secrets:
+      token: ${{ secrets.DRAFT_PAT }}
