--- a/.github/workflows/draft-on-changes-requested.yml
+++ b/.github/workflows/draft-on-changes-requested.yml
@@ -8,8 +8,26 @@ on:
 permissions: {}
 
 jobs:
-  draft:
+  get-pr:
     if: github.event.workflow_run.conclusion == 'success'
+    runs-on: ubuntu-latest
+    permissions:
+      actions: read
+    outputs:
+      pr_number: ${{ steps.pr.outputs.number }}
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          name: pr-info
+          run-id: ${{ github.event.workflow_run.id }}
+          github-token: ${{ github.token }}
+      - id: pr
+        run: echo "number=$(cat pr_number.txt)" >> "$GITHUB_OUTPUT"
+
+  draft:
+    needs: get-pr
     uses: DIRACGrid/management/.github/workflows/draft-on-changes-requested.yml@master
+    with:
+      pr_number: ${{ fromJSON(needs.get-pr.outputs.pr_number) }}
     secrets:
       token: ${{ secrets.DRAFT_PAT }}
