chore: consolidate dependency management to Renovate-only
Replace Dependabot with Renovate for GitHub Actions version updates,
matching the approach already used in diracx-charts. Add documentation
covering the dependency management strategy across all project repos.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -169,6 +169,7 @@ nav:
       - Run demo: dev/explanations/run_demo.md
       - Extensions: dev/explanations/extensions.md
       - Designing functionality: dev/explanations/designing-functionality.md
+      - Dependency management: dev/explanations/dependency-management.md
     - Reference:
       - dev/reference/index.md
       - Dev env variables: dev/reference/env-variables.md
