chore(renovate): Group autorest package updates

--- a/renovate.json
+++ b/renovate.json
@@ -7,6 +7,12 @@
       "description": "Group all GitHub Actions updates together",
       "matchManagers": ["github-actions"],
       "groupName": "GitHub Actions"
+    },
+    {
+      "description": "Group all Autorest updates together",
+      "matchManagers": ["custom.regex"],
+      "matchPackageNames": ["autorest", "@autorest/*"],
+      "groupName": "Autorest"
     }
   ],
   "customManagers": [
