feat: replace container base images with pixi-managed environments
Move container builds from the multi-repo base image approach (micromamba
+ conda environment.yml + pip install --no-deps) to self-contained
multi-stage Dockerfiles using pixi environments from the committed lock
file. This ensures reproducible builds with exact version parity between
development and production.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -121,26 +121,6 @@ jobs:
         with:
           cache: false
           environments: ${{ matrix.extension == 'diracx' && 'default' || 'default-gubbins' }}
-      - name: Build gubbins wheels
-        if: ${{ matrix.extension == 'gubbins' }}
-        run: |
-          for pkg_dir in $PWD/diracx-*; do
-            echo "Building $pkg_dir"
-            pixi exec python-build --outdir $PWD/extensions/containers/services/ $pkg_dir
-          done
-          # Also build the diracx metapackage
-          pixi exec python-build --outdir $PWD/extensions/containers/services/ .
-          # And build the gubbins package
-          for pkg_dir in $PWD/extensions/gubbins/gubbins-*; do
-            # Skip the testing package
-            if [[ "${pkg_dir}" =~ .*testing.* ]];
-            then
-              echo "Do not build ${pkg_dir}";
-              continue;
-            fi
-            echo "Building $pkg_dir"
-            pixi exec python-build --outdir $PWD/extensions/containers/services/ $pkg_dir
-          done
       - name: Set up Docker Buildx
         if: ${{ matrix.extension == 'gubbins' }}
         uses: docker/setup-buildx-action@v3
@@ -148,11 +128,10 @@ jobs:
         if: ${{ matrix.extension == 'gubbins' }}
         uses: docker/build-push-action@v6
         with:
-          context: extensions/containers/services
+          context: extensions/gubbins
+          file: extensions/containers/services/Dockerfile
           tags: gubbins/services:dev
           outputs: type=docker,dest=/tmp/gubbins_services_image.tar
-          build-args: |
-            EXTENSION_CUSTOM_SOURCES_TO_INSTALL=/bindmount/gubbins_db*.whl,/bindmount/gubbins_logic*.whl,/bindmount/gubbins_routers*.whl,/bindmount/gubbins_client*.whl
       - name: Load image
         if: ${{ matrix.extension == 'gubbins' }}
         run: |
