--- a/extensions/containers/services/Dockerfile
+++ b/extensions/containers/services/Dockerfile
@@ -1,16 +1,37 @@
-FROM ghcr.io/diracgrid/diracx/services:dev
+FROM ghcr.io/prefix-dev/pixi:latest AS build
 
-# Instructs the entrypoint to overwrite
+WORKDIR /app
+COPY pixi.toml pixi.lock ./
+
+# Copy gubbins source directories
+COPY gubbins-core/ gubbins-core/
+COPY gubbins-db/ gubbins-db/
+COPY gubbins-logic/ gubbins-logic/
+COPY gubbins-routers/ gubbins-routers/
+COPY gubbins-testing/ gubbins-testing/
+COPY pyproject.toml ./
+
+# Switch to non-editable installs (same workaround as CI)
+RUN sed -i 's@editable = true@editable = false@g' pixi.toml
+
+RUN pixi install --locked -e container-services
+
+# Generate activation script
+RUN pixi shell-hook -e container-services > /activate.sh
+
+FROM ubuntu:24.04
+
+EXPOSE 8000
+
 ENV DIRACX_EXTENSIONS="gubbins,diracx"
-ENV GUBBINS_IMAGE_PACKAGES=core,db,routers
 
-ARG EXTRA_PACKAGES_TO_INSTALL
+# Copy the installed environment
+COPY --from=build /app/.pixi/envs/container-services /app/.pixi/envs/container-services
+COPY --from=build /activate.sh /activate.sh
 
-RUN --mount=type=bind,source=.,target=/bindmount GUBBINS_CUSTOM_SOURCE_PREFIXES=/bindmount /entrypoint.sh bash -exc "ls /bindmount && echo 'Running pip check' && pip check"
+# In many clusters the container is run as a random uid for security reasons.
+RUN chmod -R g=u /app/.pixi
 
-# # In many clusters the container is ran as a random uid for security reasons.
-# # If we mark the conda directory as group 0 and give it group write permissions
-# # then we're still able to manage the environment from inside the container.
-USER 0
-RUN chown -R $MAMBA_USER:0 /opt/conda && chmod -R g=u /opt/conda
-USER $MAMBA_USER
+# Use tini as init (installed by pixi in the env)
+ENTRYPOINT ["/app/.pixi/envs/container-services/bin/tini", "--", \
+            "/bin/bash", "-c", "source /activate.sh && exec \"$@\"", "--"]
